--- a/src/app/components/games/games.component.scss
+++ b/src/app/components/games/games.component.scss
@@ -6,66 +6,46 @@
 .game-item {
   cursor:  pointer;
   padding: 5px;
+  border-radius: 4px;
+  background: #221F2A;
+  transition: background-color 0.4s ease;
 
   &:hover {
-    .game-viewers, .game-title {
-      background: #7550b9;
-    }
-  }
-}
+    background: #7550b9;
 
-.game-title {
-  width: 100%;
-  background: #17141F;
-  color: #DAD8DE;
-  height: 22px;
-  border-top-right-radius: 4px;
-  border-top-left-radius: 4px;
-  transition: background 0.4s;
-  
-  span {
-    display: flex;
-    height: 22px;
-    align-items: center;
-    justify-content: center;
+    .game-name {
+      background-color: #7550b9;
+    }
   }
 }
 
 .game-cover {
   width: 100%;
   height: 100%;
-  border-top-right-radius: 4px;
-  border-top-left-radius: 4px;
+  border-radius: 4px;
 }
 
 .game-content {
   height: 100%;
 }
 
-.game-viewers {
+.game-name {
   width: 100%;
   float: left;
-  background: #17141F;
   color: #DAD8DE;
   height: 22px;
-  border-bottom-right-radius: 4px;
-  border-bottom-left-radius: 4px;
-  transition: background 0.4s;
   position: absolute;
+  transition: background-color 0.4s ease;
   bottom: 0px;
   left: 0px;
+  border-radius: 4px;
   
   span {
     display: flex;
     height: 22px;
     align-items: center;
     justify-content: center;
-    
-    i {
-      margin-right: 10px;
-      font-size: 20px;
-      display: inline-block;
-    }
+    border-radius: 4px;
   }
 }
 
